Revise personal details and project descriptions
Updated personal information and project details in the HTML.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header>
-    <h1>Luz Bonazeski</h1>
+    <h1>Bonazeski Luz Nicohol</h1>
     <p>Diseñadora Web / Desarrolladora Web</p>
   </header>
 
@@ -17,23 +17,45 @@
     <h2>Sobre mí</h2>
     <p>
       Diseñadora web con formación en sistemas y experiencia en proyectos académicos reales.
-      He trabajado en diseño de interfaces, maquetación web y desarrollo de sistemas web,
-      cubriendo todas las etapas del proceso.
+      He trabajado en el diseño de interfaces, maquetación web y desarrollo de sistemas web,
+      participando en todas las etapas del proceso: análisis, diseño visual, desarrollo,
+      pruebas y documentación.
     </p>
+
   </section>
 
   <section>
-    <h2>¿Qué hago?</h2>
-    <ul>
-      <li>Diseño de interfaces (Figma)</li>
-      <li>Maquetación web (HTML, CSS, Bootstrap)</li>
-      <li>Desarrollo web (PHP, MySQL)</li>
-    </ul>
+  <section>
+      <h2>Qué hago</h2>
+      <ul>
+        <li>Diseño de interfaces y experiencia de usuario (Figma)</li>
+        <li>Maquetación web responsive (HTML, CSS, Bootstrap)</li>
+        <li>Desarrollo de sistemas web (PHP, MySQL)</li>
+        <li>Análisis funcional y relevamiento de requerimientos</li>
+        <li>Modelado de procesos y comprensión de necesidades del usuario</li>
+        <li>Redacción de documentación funcional y técnica</li>
+      </ul>
+</section>
+
   </section>
 
   <section>
     <h2>Proyectos</h2>
-    <p>Próximamente</p>
+    <section>
+  <h2>Proyectos</h2>
+
+  <div>
+    <h3>Sistema de Autogestión Institucional</h3>
+    <p>
+      Proyecto académico desarrollado para resolver una problemática real dentro
+      de una institución educativa.
+    </p>
+    <p><strong>Rol:</strong> Diseño web y desarrollo.</p>
+    <p><strong>Tecnologías:</strong> Figma, HTML, CSS, Bootstrap, PHP, MySQL</p>
+  </div>
+
+</section>
+
   </section>
 
   <section>
