Add project details to index.html

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 
   </section>
 
-  <section>
-    <h2>Proyectos</h2>
-    <section>
+<section>
   <h2>Proyectos</h2>
 
   <div>
@@ -54,9 +52,50 @@
     <p><strong>Tecnologías:</strong> Figma, HTML, CSS, Bootstrap, PHP, MySQL</p>
   </div>
 
+  <div>
+  <h3>Sistema de Gestión de Préstamos – Biblioteca</h3>
+  <p>
+    Proyecto académico orientado al desarrollo de un sistema de escritorio
+    para la gestión de préstamos de libros.
+  </p>
+  <p>
+    <strong>Rol:</strong> Análisis funcional, modelado, desarrollo y pruebas.
+  </p>
+  <p>
+    <strong>Tecnologías:</strong> .NET, C#, MySQL.
+  </p>
+</div>
+
+  <div>
+  <h3>Sistema Web – Citas a Ciegas</h3>
+  <p>
+    Proyecto académico desarrollado en el marco del cursado, orientado
+    a la aplicación de conceptos de análisis, diseño,  desarrollo web en metodologías ágiles.
+  </p>
+  <p>
+    <strong>Rol:</strong> Diseño de interfaces, desarrollo front-end y back-end,
+    definición de probelmatica y flujo del sistema.
+  </p>
+  <p>
+    <strong>Tecnologías:</strong> HTML, CSS, Bootstrap, PHP, MySQL, APIs (googlemaps)
+  </p>
+</div>
+
+  <div>
+  <h3>Sitios Web – Práctica Frontend</h3>
+  <p>
+    Desarrollo de sitios web como práctica de maquetación y diseño de interfaces,
+    aplicando principios de estructura, responsividad y experiencia de usuario.
+  </p>
+  <p>
+    <strong>Tecnologías:</strong> HTML, CSS.
+  </p>
+</div>
+
+
 </section>
 
-  </section>
+
 
   <section>
     <h2>Contacto</h2>
