Refactor index.html structure and content
Reorganized the HTML structure, updated header and section content, and added new project details.

--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body>
 
-  <header>
+  <header class="site-header">
     <h1>Bonazeski Luz Nicohol</h1>
-    <p>Diseñadora Web / Desarrolladora Web</p>
+    <p>Analista / Desarrolladora Web</p>
   </header>
 
-  <section>
-    <h2>Sobre mí</h2>
-    <p>
-      Diseñadora web con formación en sistemas y experiencia en proyectos académicos reales.
-      He trabajado en el diseño de interfaces, maquetación web y desarrollo de sistemas web,
-      participando en todas las etapas del proceso: análisis, diseño visual, desarrollo,
-      pruebas y documentación.
-    </p>
+  <main class="container">
 
-  </section>
+    <section>
+      <h2>Sobre mí</h2>
+      <p>
+        Diseñadora web con formación en sistemas y experiencia en proyectos académicos reales.
+        He trabajado en el diseño de interfaces, maquetación web y desarrollo de sistemas web,
+        participando en todas las etapas del proceso: análisis, diseño visual, desarrollo,
+        pruebas y documentación.
+      </p>
+    </section>
 
-  <section>
-  <section>
+    <section>
       <h2>Qué hago</h2>
       <ul>
         <li>Diseño de interfaces y experiencia de usuario (Figma)</li>
@@ -35,73 +35,68 @@
         <li>Modelado de procesos y comprensión de necesidades del usuario</li>
         <li>Redacción de documentación funcional y técnica</li>
       </ul>
-</section>
+    </section>
 
-  </section>
+    <section>
+      <h2>Proyectos</h2>
 
-<section>
-  <h2>Proyectos</h2>
+      <div class="project">
+        <h3>Sistema de Autogestión Institucional</h3>
+        <p>
+          Proyecto académico desarrollado para resolver una problemática real dentro
+          de una institución educativa.
+        </p>
+        <p><strong>Rol:</strong> Diseño web y desarrollo.</p>
+        <p><strong>Tecnologías:</strong> Figma, HTML, CSS, Bootstrap, PHP, MySQL</p>
+      </div>
 
-  <div>
-    <h3>Sistema de Autogestión Institucional</h3>
-    <p>
-      Proyecto académico desarrollado para resolver una problemática real dentro
-      de una institución educativa.
-    </p>
-    <p><strong>Rol:</strong> Diseño web y desarrollo.</p>
-    <p><strong>Tecnologías:</strong> Figma, HTML, CSS, Bootstrap, PHP, MySQL</p>
-  </div>
+      <div class="project">
+        <h3>Sistema de Gestión de Préstamos – Biblioteca</h3>
+        <p>
+          Proyecto académico orientado al desarrollo de un sistema de escritorio
+          para la gestión de préstamos de libros.
+        </p>
+        <p><strong>Rol:</strong> Análisis funcional, modelado, desarrollo y pruebas.</p>
+        <p><strong>Tecnologías:</strong> .NET, C#, MySQL</p>
+      </div>
 
-  <div>
-  <h3>Sistema de Gestión de Préstamos – Biblioteca</h3>
-  <p>
-    Proyecto académico orientado al desarrollo de un sistema de escritorio
-    para la gestión de préstamos de libros.
-  </p>
-  <p>
-    <strong>Rol:</strong> Análisis funcional, modelado, desarrollo y pruebas.
-  </p>
-  <p>
-    <strong>Tecnologías:</strong> .NET, C#, MySQL.
-  </p>
-</div>
+      <div class="project">
+        <h3>Sistema Web – Citas a Ciegas</h3>
+        <p>
+          Proyecto académico desarrollado en el marco del cursado, orientado
+          a la aplicación de conceptos de análisis, diseño y desarrollo web
+          bajo metodologías ágiles.
+        </p>
+        <p>
+          <strong>Rol:</strong> Diseño de interfaces, desarrollo front-end y back-end,
+          definición de la problemática y flujo del sistema.
+        </p>
+        <p><strong>Tecnologías:</strong> HTML, CSS, Bootstrap, PHP, MySQL, APIs</p>
+      </div>
 
-  <div>
-  <h3>Sistema Web – Citas a Ciegas</h3>
-  <p>
-    Proyecto académico desarrollado en el marco del cursado, orientado
-    a la aplicación de conceptos de análisis, diseño,  desarrollo web en metodologías ágiles.
-  </p>
-  <p>
-    <strong>Rol:</strong> Diseño de interfaces, desarrollo front-end y back-end,
-    definición de probelmatica y flujo del sistema.
-  </p>
-  <p>
-    <strong>Tecnologías:</strong> HTML, CSS, Bootstrap, PHP, MySQL, APIs (googlemaps)
-  </p>
-</div>
+      <div class="project">
+        <h3>Sitios Web – Práctica Frontend</h3>
+        <p>
+          Desarrollo de sitios web como práctica de maquetación y diseño de interfaces,
+          aplicando principios de estructura, responsividad y experiencia de usuario.
+        </p>
+        <p><strong>Tecnologías:</strong> HTML, CSS</p>
+      </div>
 
-  <div>
-  <h3>Sitios Web – Práctica Frontend</h3>
-  <p>
-    Desarrollo de sitios web como práctica de maquetación y diseño de interfaces,
-    aplicando principios de estructura, responsividad y experiencia de usuario.
-  </p>
-  <p>
-    <strong>Tecnologías:</strong> HTML, CSS.
-  </p>
-</div>
+    </section>
 
+    <section>
+      <h2>Contacto</h2>
+      <p>Email: bonazeskiluz@gmail.com</p>
+      <p>
+        LinkedIn:
+        <a href="https://www.linkedin.com/in/luz-bonazeski-93649133b" target="_blank">
+          Ver perfil
+        </a>
+      </p>
+    </section>
 
-</section>
-
-
-
-  <section>
-    <h2>Contacto</h2>
-    <p>Email: bonazeskiluz@gmail.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/luz-bonazeski-93649133b" target="_blank">Ver perfil</a></p>
-  </section>
+  </main>
 
 </body>
 </html>
